@@ -17,7 +17,7 @@ jobs:
           #- {os: macOS-13}
           #- {os: macOS-latest}
           - {os: ubuntu-latest}
-          - {os: ubuntu-24.04-arm}
+          #- {os: ubuntu-24.04-arm}
           
     runs-on: ${{ matrix.os }}
 
