@@ -1,30 +1,0 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
-
-language: c
-sudo: required
-dist: trusty
-
-before_install:
-  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  # optionally add our launchpad repo, but not needed here
-  # - sudo add-apt-repository -y ppa:edd/r-3.5
-  # load gcc-6 and make it default
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - ./run.sh bootstrap
-
-install:
-  - ./run.sh install_aptget r-cran-rcpp r-cran-bh
-  - sudo apt-get install -y gcc-6 g++-6
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 60 --slave /usr/bin/g++ g++ /usr/bin/g++-6
-  
-script:
-  - ./run.sh run_tests
-
-after_failure:
-  - ./run.sh dump_logs
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
-        
